- set default font size in css same as in js to avoid delayed text jump with default settings

--- a/static/css/cats.css
+++ b/static/css/cats.css
@@ -353,6 +353,7 @@ ul.tabbar:empty {
 ***************************************************************/
 #editor { 
 	bottom: 0;
+	font-size: 13px;
 	left: 0;
 	position: absolute;
 	right: 0;
